# fsck-fat-standalone

./: CMakeLists.txt  LICENSE  boot.c  check.c  dir.c  ext.h  fat.c  main.c
fsutil/: CMakeLists.txt  fsutil.c  fsutil.h
